vcs/specs/parser/fail/expressions/missing_while_body.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, while, body, error
// @description: While loop missing body block
// @expected-error: E018

fn test() {
    while true
    let x = 1;
}
